# HazelReplica

./: .gitingnore  .gitmodules  CMakeLists.txt  GenerateBuild.bat  Hazel.slnx  README.md
Hazel/: CMakeLists.txt  Hazel.vcxproj  Hazel.vcxproj.filters
Hazel/src/: Hazel.h  Test.cpp  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  Log.cpp  Log.h  Timestep.h  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  logfile_2026-02-18
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
